feat: showing fixing ui

--- a/assets/css/components/_enrollment.scss
+++ b/assets/css/components/_enrollment.scss
@@ -19,48 +19,6 @@
       // width: fit-content;
       // padding-right: 25px;
     }
-    .tab-title {
-      text-decoration: none;
-      font-weight: 500;
-      border-radius: 22px;
-      font-size: 1rem;
-      padding: 25px;
-      color: #233151;
-      background-color: #f9f9f9;
-      &::before {
-        position: inherit;
-        content: '';
-        height: 40px;
-        width: 40px;
-        display: inline-block;
-        vertical-align: middle;
-        margin-right: 10px;
-        background-size: 100%;
-        background-image: url('https://cgt-dev-ft.microsysx.com/images/v2/icons/circle.svg');
-        border-top: none;
-      }
-    }
-    .ant-tabs-tab-completed {
-      background-color: #d1f2dc;
-      &::before {
-        background-image: url('https://cgt-dev-ft.microsysx.com/images/v2/icons/status-done-circle.svg');
-      }
-    }
-    .ant-tabs-tab-active {
-      .tab-title {
-        background-color: #f2f5fb;
-        &::before {
-          background-size: cover;
-          background-image: url('https://cgt-dev-ft.microsysx.com/images/v2/icons/circle-active.svg');
-        }
-      }
-    }
-
-    .ant-tabs-tab {
-      text-align: left;
-      margin-top: 15px;
-      padding: 0;
-    }
   }
 
   .ant-tabs-ink-bar {
@@ -227,7 +185,7 @@
     background-color: #e2e2e2;
     border: 1px solid #ececec;
   }
-  
+
   .external-entity {
     .ant-descriptions-item-content {
       display: block;
@@ -257,6 +215,52 @@
         border-color: transparent !important;
         box-shadow: none !important;
         background-color: #fff !important;
+      }
+    }
+  }
+}
+
+.green-on-update {
+  .ant-tabs-tab {
+    text-align: left;
+    margin-top: 15px;
+    padding: 0;
+  }
+  .tab-title {
+    text-decoration: none;
+    font-weight: 500;
+    border-radius: 22px;
+    font-size: 1rem;
+    padding: 25px;
+    color: #233151;
+    background-color: #f9f9f9;
+    &::before {
+      position: inherit;
+      content: '';
+      height: 40px;
+      width: 40px;
+      display: inline-block;
+      vertical-align: middle;
+      margin-right: 10px;
+      background-size: 100%;
+      background-image: url('https://cgt-dev-ft.microsysx.com/images/v2/icons/circle.svg');
+      border-top: none;
+    }
+  }
+  .ant-tabs-bar {
+    .ant-tabs-tab-completed {
+      background-color: #d1f2dc;
+      &::before {
+        background-image: url('https://cgt-dev-ft.microsysx.com/images/v2/icons/status-done-circle.svg');
+      }
+    }
+    .ant-tabs-tab-active {
+      .tab-title {
+        background-color: #f2f5fb;
+        &::before {
+          background-size: cover;
+          background-image: url('https://cgt-dev-ft.microsysx.com/images/v2/icons/circle-active.svg');
+        }
       }
     }
   }
@@ -295,6 +299,7 @@
     text-overflow: ellipsis;
   }
 }
+
 .schedule-logistic-selection {
   .ant-select-selection {
     margin-bottom: 20px;
