fix: minor ui issues

--- a/assets/css/components/_patient-details.scss
+++ b/assets/css/components/_patient-details.scss
@@ -61,6 +61,7 @@
     dt {
       color: #909090;
       font-weight: 700;
+      line-height: 28px;
       // display: inline !important;
     }
   }
@@ -100,4 +101,3 @@
   background-color: #fff;
   border: none;
 }
-
