--- a/assets/css/components/_enrollment.scss
+++ b/assets/css/components/_enrollment.scss
@@ -227,7 +227,7 @@
     background-color: #e2e2e2;
     border: 1px solid #ececec;
   }
-  
+
   .external-entity {
     .ant-descriptions-item-content {
       display: block;
@@ -282,6 +282,20 @@
       padding: 20px 15px;
       background-color: gainsboro;
       border: 1px solid gainsboro;
+    }
+  }
+  .fc-daygrid-event.fc-daygrid-dot-event.fc-event {
+    padding: 10px;
+    font-size: 12px;
+    background: #3869d1;
+    margin-bottom: 10px;
+    text-align: center;
+    box-shadow: 1px 1px 4px 0 #323232bf;
+    &:hover {
+      cursor: default;
+    }
+    .fc-daygrid-event-dot {
+      display: none;
     }
   }
 }
