--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -2,7 +2,7 @@
 .ant-select-selection {
   margin-bottom: 20px;
   border-radius: $default-radius;
-  padding: 9px 1px 40px 1px;
+  padding: 12px 1px 40px 1px;
   border: none;
   background-color: #f9f9f9;
 }
@@ -17,6 +17,14 @@
   .ant-select-selection__placeholder {
     color: #464e5f;
   }
+}
+.slots-main {
+  .ant-select-selection__placeholder {
+    display: block !important;
+  }
+  // .note-area {
+
+  // }
 }
 .ant-time-picker-input {
   border-radius: $default-radius;
