--- a/assets/css/partials/_cards.scss
+++ b/assets/css/partials/_cards.scss
@@ -67,3 +67,20 @@
   padding-left: 70px;
   padding-right: 70px;
 }
+.default-card-x > .ant-card-body {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.mt-15.view-screen {
+  .ant-card-body {
+    .ant-tabs {
+      .ant-tabs-nav-scroll {
+        text-align: center;
+        .ant-tabs-tab {
+          margin-right: 3px !important;
+        }
+      }
+    }
+  }
+}
