--- a/assets/css/partials/_tempFile.scss
+++ b/assets/css/partials/_tempFile.scss
@@ -1,3 +1,28 @@
+.logistic_tabs {
+  .ant-tabs-bar {
+    border: 0;
+  }
+  .ant-tabs-nav.ant-tabs-nav-animated {
+    width: 100%;
+  }
+  .ant-tabs-tab {
+    width: 48%;
+    border-radius: 44px;
+    border: 1px solid #ececec;
+    text-align: center;
+    margin: 0;
+  }
+  .ant-tabs-tab-active {
+    border: 1px solid #a3c9ff !important;
+    margin: 2px;
+    color: #3869d1;
+    background-color: #f2f5fb;
+  }
+  .ant-tabs-ink-bar.ant-tabs-ink-bar-no-animated {
+    display: none !important;
+  }
+}
+// -------------
 .screening-tabs {
   .ant-tabs-nav-wrap {
     .ant-table-tbody {
@@ -50,9 +75,9 @@
         border-right: 0;
       }
     }
-    .ant-upload-list-item-name.ant-upload-list-item-name-icon-count-1 {
-      width: 130px;
-    }
+    // .ant-upload-list-item-name.ant-upload-list-item-name-icon-count-1 {
+    //   width: 130px;
+    // }
   }
 }
 // ============
@@ -67,7 +92,7 @@
 .view-screen {
   .pills-tabs.no-shadow {
     .ant-tabs-tab {
-      margin: 5px 22px 2px 5px !important;
+      margin: 5px 7px 2px 5px !important;
     }
     .ant-tabs-tab:focus {
       // background-color: transparent !important;
