--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -239,7 +239,7 @@
   }
   .cancel {
     .ant-steps-item {
-      background: #ff8361;
+      background: #ffd8d8;
     }
     .ant-steps {
       @extend .blockState;
