fix: logistic ui and minor fixes

--- a/assets/css/components/_patient-details.scss
+++ b/assets/css/components/_patient-details.scss
@@ -66,6 +66,16 @@
     }
   }
 }
+.btn-send {
+  height: 32px;
+  background: #ececec;
+  border: gray;
+  color: gray;
+  &:hover {
+    color: #000;
+    background-color: #c1c1c1;
+  }
+}
 .btn-send.ant-btn[disabled] {
   display: none !important;
 }
