--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -387,6 +387,14 @@ a {
       border: 1px solid #ececec !important;
     }
   }
+  .default-card-x {
+    .ant-alert {
+      width: 75%;
+      margin: auto;
+      background-color: #ececec;
+      border: gray;
+    }
+  }
 }
 .screening-tabs {
   .ant-tabs-nav-wrap {
@@ -520,4 +528,9 @@ a {
 .ant-calendar-picker-clear,
 .ant-calendar-picker-icon {
   top: 46%;
+}
+//
+.bags_section > .ant-tabs-bar.ant-tabs-top-bar.ant-tabs-card-bar {
+  margin: 25px;
+  margin-bottom: 17px;
 }
