--- a/assets/css/components/_sidebar.scss
+++ b/assets/css/components/_sidebar.scss
@@ -193,7 +193,24 @@
     }
   }
 }
+.sidebar::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
 
+.sidebar::-webkit-scrollbar
+{
+	width: 3.5px;
+	background-color: #F5F5F5;
+}
+
+.sidebar::-webkit-scrollbar-thumb
+{
+	background-color: #969696;
+}
+
+// =================================================================
 .main-section {
   border-left: 1px solid #e8e8e8 !important;
 }
