--- a/assets/css/partials/_tempFile.scss
+++ b/assets/css/partials/_tempFile.scss
@@ -11,6 +11,7 @@
     border: 1px solid #ececec;
     text-align: center;
     margin: 0;
+    margin-right: 8px !important;
   }
   .ant-tabs-tab-active {
     border: 1px solid #a3c9ff !important;
