--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -123,6 +123,7 @@
     // }
     .ant-steps-item {
       margin-right: 8px !important;
+      padding-right: 3px;
     }
   }
 
@@ -198,7 +199,7 @@
       content: '';
       height: 20px;
       width: 20px;
-      margin-left: 10px;
+      margin-left: 6px;
       margin-right: 3px;
       margin-top: -3px;
       display: inline-block;
@@ -329,7 +330,7 @@
     .ant-steps-item-content {
       margin-left: 5px;
       &::before {
-        margin: 0;
+        // margin: 0;
         // margin-left: 15px;
         background-image: url(https://cgt-dev-ft.microsysx.com/images/v2/icons/circle-active.svg);
       }
