--- a/assets/css/partials/_tabs.scss
+++ b/assets/css/partials/_tabs.scss
@@ -84,10 +84,14 @@
 
   .ant-tabs.ant-tabs-card {
     .ant-tabs-tab {
-      padding: 16px 56px;
+      padding: 13px 56px;
       line-height: initial;
       height: auto;
       background-color: #f9f9f9 !important;
+    }
+    .ant-tabs-tab-active {
+      // background-color: #d1f2dc !important;
+      box-shadow: 0 0 0 0.2rem rgb(0 123 255 / 25%);
     }
   }
 }
@@ -110,7 +114,7 @@
 .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active {
   color: #7c8db5;
   border: solid 1px #9dc5ff !important;
-  background-color: #f2f5fb !important;
+  background-color: #f2f5fb;
   background-color: #f3f8ff;
   font-weight: 500;
   // border: 0.1px solid #a3c9ff;
