--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,6 +33,7 @@
 @import './components/consumables';
 @import './components/support';
 @import './components/screening';
+@import './components/forms';
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400&display=swap');
 
@@ -531,6 +532,7 @@ a {
   margin: 25px;
   margin-bottom: 17px;
 }
+
 //
 .toggle_record {
   width: 65px;
@@ -545,15 +547,38 @@ a {
 .toggle_record.ant-switch-checked {
   background-color: #3869d1;
 }
-// 
-.ant-tabs-vertical.ant-tabs-card.ant-tabs-left .ant-tabs-card-bar.ant-tabs-left-bar .ant-tabs-tab-active {
+//
+.ant-tabs-vertical.ant-tabs-card.ant-tabs-left
+  .ant-tabs-card-bar.ant-tabs-left-bar
+  .ant-tabs-tab-active {
   padding-right: 0;
 }
-// 
+//
 .square-table.collect-sample-data.ant-table-wrapper {
   .ant-table-row {
     div.ant-row.ant-form-item {
       margin-bottom: 2px;
+    }
+  }
+}
+
+// ================== SMARTLAB ======================
+.smartlab_task {
+  .treatment-steps {
+    .ant-steps-item {
+      margin-right: 0 !important;
+      margin-left: 5px !important;
+    }
+  }
+  .ant-steps-item-finish {
+    background-color: #cbf3e0;
+  }
+}
+.smartlab_task_inner {
+  .float-right {
+    .text-muted {
+      color: #000;
+      font-weight: 600;
     }
   }
 }
