--- a/assets/css/components/_inventory.scss
+++ b/assets/css/components/_inventory.scss
@@ -54,12 +54,12 @@
   }
 
   .h-tabs .ant-tabs-tab {
-    padding: 8px 8px;
+    padding: 8px 10px;
     margin-top: 10px;
   }
   .ant-tabs-top-bar {
     div.ant-tabs-nav-wrap {
-      text-align: center;
+      // text-align: center;
     }
   }
   .ant-tabs-nav .ant-tabs-tab {
