feat: popups_components_designed

--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -40,6 +40,7 @@
   // }
   td {
     border-top: 1px solid #e2e2e2;
+    background-color: #fff;
     border-bottom: 1px solid #e2e2e2 !important;
   }
   td:first-child {
