--- a/assets/css/partials/_cards.scss
+++ b/assets/css/partials/_cards.scss
@@ -18,6 +18,21 @@
   }
 }
 
+
+.grey-card-smart-lab {
+  background-color: #f9f9f9;
+  font-size: 0.875rem;
+  border: none;
+}
+
+.white-card-smart-lab {
+  font-size: 0.875rem;
+  font-weight: bold;
+  margin-top: 10px;
+  border-radius: 15px;
+}
+
+
 .avatar-card {
   margin-top: 15px;
   margin-bottom: 15px;
