--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -495,6 +495,21 @@ a {
     }
   }
 }
+
+.status-smart-lab-pop{
+  background-color:#D1F2DD; 
+  border-radius:20px; 
+  padding-left:20px;
+  padding-right:20px; 
+  padding-top:5px; 
+  padding-bottom:5px;
+  margin-left: 20px; 
+  font-size:15px  
+}
+.status-div{
+  height:50px; 
+  font-size:20px
+}
 // ==================================
 .manf-stats {
   .imageHeading {
