--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -161,7 +161,8 @@ input#login_username:focus {
   margin-top: -75px;
   padding-left: 5px;
   input {
-    height: 40px;
+    height: 48px;
+    padding-left: 33px !important;
     border: 1px solid #bebfcb;
   }
   ::-webkit-input-placeholder {
