--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -568,6 +568,9 @@ a {
     .ant-steps-item {
       margin-right: 0 !important;
       margin-left: 7px !important;
+      .ant-steps-item-title {
+        margin: 0 7px 0 0 !important;
+      }
     }
   }
   .ant-steps-item-finish {
@@ -600,9 +603,16 @@ a {
     }
   }
 }
-// 
+//
 .steps-green {
-   .step-bar {
+  .step-bar {
     border: 2px solid #1bb558;
+  }
+}
+.smartlab_home {
+  .halfNHalf {
+    .white-card.ant-card {
+      margin-top: 0;
+    }
   }
 }
