fix: ui_plus_tab_fixes_smartlab

--- a/assets/css/partials/_cards.scss
+++ b/assets/css/partials/_cards.scss
@@ -20,7 +20,7 @@
 
 
 .grey-card-smart-lab {
-  background-color: #f9f9f9;
+  background-color: #fdfdfd;
   font-size: 0.875rem;
   border: none;
 }
