--- a/assets/css/partials/_tables.scss
+++ b/assets/css/partials/_tables.scss
@@ -17,6 +17,7 @@
     padding: 12px;
     padding-left: 7px;
     padding-right: 7px;
+    background-color: #f9f9f9;
     border-top: 2px solid #ebebeb !important;
     border-bottom: 2px solid #ebebeb !important;
     font-weight: bold;
