--- a/assets/css/components/_sidebar.scss
+++ b/assets/css/components/_sidebar.scss
@@ -126,6 +126,7 @@
     padding: 10px;
     border-radius: 22px;
     display: flex;
+    margin: auto;
     img {
       color: $primary-color;
       filter: grayscale(100%) opacity(0.7);
@@ -176,6 +177,7 @@
 
   .ant-menu-inline .ant-menu-item {
     line-height: 35px;
+    position: initial;
     &::after {
       content: '';
       width: 5px;
