--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,7 +43,7 @@ body {
   font-weight: 400;
 }
 .container {
-  max-width: 1140px;
+  max-width: 1175px;
   margin: auto;
 }
 .profile-grey-bg {
@@ -496,19 +496,19 @@ a {
   }
 }
 
-.status-smart-lab-pop{
-  background-color:#D1F2DD; 
-  border-radius:20px; 
-  padding-left:20px;
-  padding-right:20px; 
-  padding-top:5px; 
-  padding-bottom:5px;
-  margin-left: 20px; 
-  font-size:15px  
+.status-smart-lab-pop {
+  background-color: #d1f2dd;
+  border-radius: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-left: 20px;
+  font-size: 15px;
 }
-.status-div{
-  height:50px; 
-  font-size:20px
+.status-div {
+  height: 50px;
+  font-size: 20px;
 }
 // ==================================
 .manf-stats {
@@ -584,7 +584,7 @@ a {
       margin-right: 0 !important;
       margin-left: 7px !important;
       .ant-steps-item-title {
-        margin: 0 8px 0 0 !important;
+        margin: 0 12px 0 0 !important;
       }
     }
   }
@@ -632,6 +632,7 @@ a {
   }
 }
 .Component_body {
-.default-border-radius > .ant-card-head{
-  padding: 0 !important;
-}}
+  .default-border-radius > .ant-card-head {
+    padding: 0 !important;
+  }
+}
