--- a/assets/css/components/_forms.scss
+++ b/assets/css/components/_forms.scss
@@ -33,3 +33,8 @@
     color: grey;
   }
 }
+.bount_status {
+  .ant-calendar-picker-input.ant-input.ant-input-lg {
+    padding-bottom: 5px;
+  }
+}
