--- a/assets/css/components/_sidebar.scss
+++ b/assets/css/components/_sidebar.scss
@@ -177,7 +177,7 @@
 
   .ant-menu-inline .ant-menu-item {
     line-height: 35px;
-    position: initial;
+    // position: initial;
     &::after {
       content: '';
       width: 5px;
