--- a/assets/css/components/_support.scss
+++ b/assets/css/components/_support.scss
@@ -119,14 +119,11 @@ $chatHeight: 255px;
   }
 }
 
-.support-listing-page {
+.page-search-input-container {
   .page-search-input {
     right: 0;
     min-width: 200px;
     margin-right: 15px;
     text-align: left;
-  }
-  .ant-card-extra {
-    // text-align: right;
   }
 }
