--- a/assets/css/components/_sidebar.scss
+++ b/assets/css/components/_sidebar.scss
@@ -83,6 +83,9 @@
     max-width: 150px;
     margin-bottom: 5px;
   }
+  .title {
+    padding-left: 0 !important;
+  }
 }
 
 .ant-layout-sider-collapsed {
