--- a/assets/css/components/_inventory.scss
+++ b/assets/css/components/_inventory.scss
@@ -152,3 +152,13 @@
   padding-left: 3%;
   padding-right: 3%;
 }
+.client_msgs {
+  .ant-tabs-nav {
+    .ant-tabs-tab {
+      padding: 1px 20px !important;
+    }
+    .ant-tabs-tab::after {
+      display: none !important;
+    }
+  }
+}
