--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -254,7 +254,7 @@ a {
 }
 .inventory-storage-title {
   .page-title {
-    margin-left: 12.5%;
+    // margin-left: 12.5%;
   }
 }
 .vertical-line-standard-table {
