--- a/assets/css/partials/_helpers.scss
+++ b/assets/css/partials/_helpers.scss
@@ -47,6 +47,8 @@
   padding: 13px 15px;
   font-size: 0.875rem;
   border-radius: 10rem;
+  width: 118px !important;
+  display: inline-block !important;
 }
 
 .status-inprocess,
