--- a/assets/css/partials/_tables.scss
+++ b/assets/css/partials/_tables.scss
@@ -51,6 +51,9 @@
       border-bottom-right-radius: 44px;
       border-top-right-radius: 44px;
     }
+    span.treatmentName {
+      width: 80px;
+    }
   }
 
   .ant-table-tbody tr {
