--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -134,7 +134,7 @@ input#login_username:focus {
   border-radius: 44px;
   height: 50px;
   right: 20px;
-  margin-top: 5px;
+  // margin-top: 5px;
   padding-left: 5px;
   input {
     // height: 50px;
