--- a/assets/css/components/_login.scss
+++ b/assets/css/components/_login.scss
@@ -1,6 +1,7 @@
 .login {
-  max-width: 450px;
+  max-width: 460px;
   margin: auto;
+  margin-left: 90px !important;
   .ant-card {
     box-shadow: 0 26px 120px rgba(0, 0, 0, 0.04);
     border-radius: 30px;
@@ -13,6 +14,9 @@
   .ant-btn
   {
     margin-bottom: 10px;
+  }
+  .ant-card-head {
+    border-bottom: none;
   }
   .ant-card-head-title{
     font-weight: 600;
@@ -52,7 +56,7 @@
     right: 0;
     top: 0;
     border-radius: 30px;
-    max-width: 25%;
+    max-width: 30%;
   }
 }
 
