--- a/assets/css/partials/_helpers.scss
+++ b/assets/css/partials/_helpers.scss
@@ -104,12 +104,16 @@
 
 .dated-time {
   background-color: $danger;
-  padding: 7% 16%;
+  padding: 7% 14%;
   border-radius: 22px;
   color: white;
   font-size: 1.75rem;
   cursor: pointer;
   @extend .light-shadow;
+
+  position: absolute;
+  margin: -7px;
+  margin-left: 7px;
 }
 
 .w-1200 {
