--- a/assets/css/partials/_shadow.scss
+++ b/assets/css/partials/_shadow.scss
@@ -7,7 +7,7 @@
 }
 
 .light-shadow {
-  box-shadow: 0 15px 12px rgb(161 161 161 / 4%);
+  box-shadow: 0 15px 12px rgba(161, 161, 161, 0.132);
 }
 
 .r-shadow {
