fix: hospital and logistic ui

--- a/assets/css/components/_enrollment.scss
+++ b/assets/css/components/_enrollment.scss
@@ -1,5 +1,5 @@
 .enrollment-page {
-  margin: 2% 2%;
+  margin: 0 2%;
   padding: 26px !important;
   .ant-tabs .ant-tabs-left-content {
     border-left: unset;
