--- a/assets/css/partials/_tempFile.scss
+++ b/assets/css/partials/_tempFile.scss
@@ -5,13 +5,23 @@
   .ant-tabs-nav.ant-tabs-nav-animated {
     width: 100%;
   }
+  .ant-tabs-tab:nth-child(1)::after{
+    content: ' ';
+    width: 3px;
+    height: 34px;
+    display: inline-block;
+    position: absolute;
+    background: #abcbf37d;
+    right: -11px;
+    top: 5px;
+  }
   .ant-tabs-tab {
     width: 48%;
     border-radius: 44px;
     border: 1px solid #ececec;
     text-align: center;
     margin: 0;
-    margin-right: 8px !important;
+    margin-right: 18px !important;
   }
   .ant-tabs-tab-active {
     border: 1px solid #a3c9ff !important;
@@ -21,6 +31,9 @@
   }
   .ant-tabs-ink-bar.ant-tabs-ink-bar-no-animated {
     display: none !important;
+  }
+  .ant-calendar-picker-input.ant-input {
+    margin-top: 0;
   }
 }
 // -------------
