--- a/assets/css/components/_home.scss
+++ b/assets/css/components/_home.scss
@@ -53,6 +53,8 @@
         color 0.3s ease-in-out, background-image 0.3s ease-in-out;
       background-image: url('https://cgt-dev-ft.microsysx.com/assets/media/bg/bg-hover-blue.svg');
       background-size: cover;
+      background-repeat: no-repeat;
+
       h4 {
         color: #fff;
       }
@@ -83,6 +85,8 @@
       color 0.3s ease-in-out, background-image 0.3s ease-in-out;
     background-image: url('https://cgt-dev-ft.microsysx.com/assets/media/bg/bg-hover-blue.svg');
     background-size: cover;
+    background-repeat: no-repeat;
+
   }
   .stats {
     color: #233151;
@@ -192,6 +196,8 @@
       color 0.3s ease-in-out, background-image 0.3s ease-in-out;
     background-image: url('https://cgt-dev-ft.microsysx.com/assets/media/bg/bg-hover-blue.svg');
     background-size: cover;
+    background-repeat: no-repeat;
+
   }
   .stats {
     color: #233151;
