--- a/assets/css/components/_enrollment.scss
+++ b/assets/css/components/_enrollment.scss
@@ -245,6 +245,7 @@
       background-size: 100%;
       background-image: url('https://cgt-dev-ft.microsysx.com/images/v2/icons/circle.svg');
       border-top: none;
+      background-repeat: no-repeat;
     }
   }
   .ant-tabs-bar {
@@ -252,6 +253,7 @@
       background-color: #d1f2dc;
       &::before {
         background-image: url('https://cgt-dev-ft.microsysx.com/images/v2/icons/status-done-circle.svg');
+        background-repeat: no-repeat;
       }
     }
     .ant-tabs-tab-active {
@@ -260,6 +262,8 @@
         &::before {
           background-size: cover;
           background-image: url('https://cgt-dev-ft.microsysx.com/images/v2/icons/circle-active.svg');
+          background-repeat: no-repeat;
+
         }
       }
     }
