--- a/assets/css/partials/_tempFile.scss
+++ b/assets/css/partials/_tempFile.scss
@@ -132,6 +132,9 @@
     border: 1px solid #b8b8b8;
     padding: 9px 5px !important;
   }
+  .ant-steps-item.ant-steps-item-process {
+    width: 170px !important;
+  }
   .ant-steps-item-finish {
     padding-bottom: 4px !important;
 
