--- a/assets/css/components/_patient-details.scss
+++ b/assets/css/components/_patient-details.scss
@@ -2,6 +2,9 @@
   // margin-left:35px;
   // margin-right:35px;
   // margin-top:30px;
+  .grey-card.m-0 {
+    // padding-top: 0 !important;
+  }
   .qr-section {
     height: 240px;
     figure {
