fix: manf treatment inner ui fixes

--- a/assets/css/partials/_tempFile.scss
+++ b/assets/css/partials/_tempFile.scss
@@ -130,14 +130,14 @@
 //
 .treatment-steps.manufacturer-step {
   .ant-steps-item {
-    border: 1px solid #b8b8b8;
+    border: 1px solid #ececec;
     padding: 9px 5px !important;
   }
   .ant-steps-item.ant-steps-item-process {
     width: 170px !important;
   }
   .ant-steps-item-finish {
-    padding-bottom: 4px !important;
+    padding-bottom: 6px !important;
 
   }
   .ant-steps-item.ant-steps-item-process.ant-steps-item-active {
