--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -80,7 +80,7 @@
   }
   .ant-select-selection__placeholder,
   .ant-select-search__field__placeholder {
-    margin-top: -15px;
+    // margin-top: -15px;
   }
   .ant-table-empty .ant-table-body {
     border-radius: 60px;
