style: logistics cards

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,6 +31,7 @@
 @import './components/patient-details';
 @import './components/inventory';
 @import './components/consumables';
+@import './components/logistics';
 @import './components/support';
 @import './components/screening';
 @import './components/forms';
