--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -42,6 +42,7 @@
     border-radius: 50px;
     padding-bottom: 48px;
     padding-right: 1%;
+    margin: 0;
     .ant-calendar-range-picker-separator {
       margin-top: 3%;
     }
