--- a/assets/css/components/_screening.scss
+++ b/assets/css/components/_screening.scss
@@ -1,3 +1,4 @@
+
 .admin-screenging-questions {
   .ant-list-item {
     margin-top: 1%;
@@ -10,10 +11,16 @@
     color: black;
     padding-left: 1%;
   }
-  .ant-list-split .ant-list-item:last-child {
-    border-bottom: 1px solid !important;
-  }
+  .ant-list-grid .ant-col > .ant-list-item {
+    /* display: block; */
+    max-width: 100%;
+    margin-bottom: 16px;
+    padding-top: 0;
+    padding-bottom: 0;
+    border-bottom: none;
 }
+}
+
 // --------------
 .users-list {
   .ant-table-row {
