feat: reporting page included

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -189,6 +189,7 @@ a {
   font-size: 1.5625rem;
   font-weight: 600;
   color: #000;
+  margin-left: 15px;
 }
 .page-title.head {
   font-weight: 500 !important;
@@ -647,6 +648,7 @@ a {
   .halfNHalf {
     .white-card.ant-card {
       margin-top: 0;
+      padding: 20px;
     }
   }
 }
