--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -667,18 +667,30 @@ a {
   }
 }
 // =======================
-td.status-sample.status-sample {
-  position: relative;
-  color: black;
-}
-td.status-sample.status-sample::after {
-  content: "";
-  background: #f2f2a26b;
-  display: block;
-  width: 88px;
-  height: 38px;
-  position: absolute;
-  top: 7px;
-  left: 12px;
-  border-radius: 20px;
+// td.status-sample.status-sample {
+//   position: relative;
+//   color: black;
+// }
+// td.status-sample.status-sample::after {
+//   content: "";
+//   background: #f2f2a26b;
+//   display: block;
+//   width: 88px;
+//   height: 38px;
+//   position: absolute;
+//   top: 7px;
+//   left: 12px;
+//   border-radius: 20px;
+// }
+.status-sample {
+  #tag1 {
+    background-color: #ffffbc;
+    padding: 10px 26px;
+    border-radius: 22px;
+  }
+  #tag2 {
+    background-color: #ddffd2;
+    padding: 10px 18px;
+    border-radius: 22px;
+  }
 }
