--- a/assets/css/components/_home.scss
+++ b/assets/css/components/_home.scss
@@ -287,3 +287,23 @@
     }
   }
 }
+//
+.sample-tabs-small {
+  width: 100%;
+  .ant-tabs.ant-tabs-top {
+    // height: 47px;
+    .ant-tabs-nav-container {
+      padding: 0;
+      .ant-tabs-tab {
+        margin-right: 5px !important;
+        height: 35px !important;
+        width: 125px !important;
+        text-align: center;
+        font-size: 12px !important;
+        font-weight: 600 !important;
+        align-items: center;
+        padding: 0;
+      }
+    }
+  }
+}
