--- a/assets/css/partials/_tabs.scss
+++ b/assets/css/partials/_tabs.scss
@@ -16,6 +16,7 @@
     padding-bottom: 10px;
   }
 }
+
 .screening-tabs {
   .ant-tabs-tab {
     background-color: #f2f5fb !important;
@@ -64,6 +65,7 @@
     }
   }
 
+ 
   .ant-tabs-bar .tab-title {
     padding: 10px 33px;
   }
@@ -112,7 +114,7 @@
   border-radius: 22px;
   margin-right: 30px;
   margin-bottom: 10px;
-  font-size: 1rem !important;
+  font-size: 1rem ;
   font-weight: 600;
   background-color: #fff;
 }
