--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -687,7 +687,7 @@ a {
 // }
 .status-sample {
   #tag1 {
-    background-color: #ffffbc;
+    background-color: #ffdbdb;
     padding: 10px 26px;
     border-radius: 22px;
   }
