--- a/assets/css/components/_home.scss
+++ b/assets/css/components/_home.scss
@@ -293,6 +293,9 @@
   .ant-table-thead {
     display: none;
   }
+  .ant-tabs-nav-scroll {
+    text-align: right !important;
+  }
   .ant-pagination.ant-table-pagination{
     display: none;
   }
@@ -303,9 +306,7 @@
     // height: 47px;
     .ant-tabs-nav-container {
       padding: 0;
-      .ant-tabs-nav-scroll{
-        text-align: end;
-      }
+     
       .ant-tabs-tab {
         margin-bottom: 0;
         margin-right: 5px !important;
