--- a/assets/css/components/_home.scss
+++ b/assets/css/components/_home.scss
@@ -295,6 +295,9 @@
   }
   .ant-tabs-nav-scroll {
     text-align: right !important;
+    .ant-tabs-nav {
+      width: 100%;
+    }
   }
   .ant-pagination.ant-table-pagination{
     display: none;
@@ -308,15 +311,17 @@
       padding: 0;
      
       .ant-tabs-tab {
+        width: 48% !important;
         margin-bottom: 0;
         margin-right: 5px !important;
-        height: 35px !important;
-        width: 125px !important;
+        height: 37px !important;
+        // width: 125px !important;
         text-align: center;
         font-size: 12px !important;
         font-weight: 600 !important;
         align-items: center;
         padding: 0;
+        margin-top: 7px;
       }
     }
   }
