--- a/assets/css/partials/_margin.scss
+++ b/assets/css/partials/_margin.scss
@@ -41,6 +41,12 @@
 .ml-20 {
   margin-left: 20px;
 }
+.ml-25 {
+  margin-left: 25px;
+}
+.ml-35 {
+  margin-left: 35px;
+}
 .ml-15 {
   margin-left: 15px;
 }
@@ -52,6 +58,15 @@
 }
 .mml-40 {
   margin-left: -40px;
+}
+.mml-20 {
+  margin-left: -20px;
+}
+.mml-30 {
+  margin-left: -30px;
+}
+.mml-25 {
+  margin-left: -25px;
 }
 .ml-30 {
   margin-left: 30px;
