fix: treatment steps line and border

--- a/assets/css/partials/_tempFile.scss
+++ b/assets/css/partials/_tempFile.scss
@@ -130,7 +130,7 @@
 //
 .treatment-steps.manufacturer-step {
   .ant-steps-item {
-    border: 1px solid #ececec;
+    // border: 1px solid #ececec;
     padding: 9px 5px !important;
   }
   .ant-steps-item.ant-steps-item-process {
