--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -112,7 +112,7 @@
       content: '';
       position: absolute;
       width: 85%;
-      top: 15px;  // Task list steps line was disturbed for that it has been adjusted from 24 to 15
+      top: 20px !important;  // Task list steps line was disturbed for that it has been adjusted from 24 to 15
       // bottom: 0;
       margin: auto;
       height: 2px;
