--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -207,7 +207,7 @@
   }
 
   .ant-steps-item-content {
-    margin-right: 5px;
+    // margin-right: 5px;
     .ant-steps-item-title {
       height: 25px;
       margin: 0;
@@ -222,7 +222,7 @@
       content: '';
       height: 20px;
       width: 20px;
-      margin-left: 6px;
+      margin-left: 5px;
       margin-right: 3px;
       margin-top: -3px;
       display: inline-block;
@@ -284,12 +284,15 @@
   }
 
   .ant-steps-item-finish {
+    padding: 7px !important;
     background: #d1f2dc;
     .ant-steps-item-content {
       &::before {
-        width: 17px;
-        height: 17px;
-        margin-left: 10px;
+        width: 19px;
+        border: 3px solid white;
+        border-radius: 15px;
+        height: 19px;
+        // margin-left: 10px;
         background-image: url(https://cgt-dev-ft.microsysx.com/images/v2/icons/status-done-circle.svg);
         background-repeat: no-repeat;
 
