fix: minor style fixes

--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -125,6 +125,7 @@
     .ant-steps-item {
       margin-right: 8px !important;
       padding-right: 3px;
+      margin-top: 2px;
     }
   }
   .step-col-logistic {
