--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -70,7 +70,7 @@
   }
 
   .container-steps-div {
-    min-width: 780px;
+    min-width: 752px;
     padding: 0;
     margin-top: 0;
     .rounded-table .ant-table-tbody td {
@@ -78,7 +78,7 @@
     }
   }
   .ant-steps-item {
-    padding: 5px 2px;
+    padding: 5px 3px;
     border: 0;
     font-size: 0.75rem;
     color: #233151;
@@ -112,12 +112,12 @@
       content: '';
       position: absolute;
       width: 85%;
-      top: 20px !important;  // Task list steps line was disturbed for that it has been adjusted from 24 to 15
+      top: 23px !important;  // Task list steps line was disturbed for that it has been adjusted from 24 to 15
       // bottom: 0;
       margin: auto;
       height: 2px;
       left: 82px;
-      background-color: #bebfcb;
+      background-color: #d8d8d8;
     }
     // .ant-steps-small.ant-steps-label-horizontal {
     // display: block !important;
@@ -125,7 +125,7 @@
     .ant-steps-item {
       margin-right: 8px !important;
       padding-right: 3px;
-      margin-top: 2px;
+      margin-top: 8px;
     }
   }
   .step-col-logistic {
@@ -136,7 +136,7 @@
       content: '';
       position: absolute;
       width: 80%;
-      top: 24px;
+      top: 17px;
       // bottom: 0;
       margin: auto;
       height: 2px;
@@ -285,7 +285,7 @@
   }
 
   .ant-steps-item-finish {
-    padding: 7px !important;
+    // padding: 7px !important;
     background: #d1f2dc;
     .ant-steps-item-content {
       &::before {
